--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -2,6 +2,8 @@
     "$schema": "https://docs.renovatebot.com/renovate-schema.json",
     "extends": ["config:recommended"],
     "labels": ["dependencies"],
+    "automerge": true,
+    "automergeType": "branch",
     "packageRules": [
         {
             "matchDatasources": ["npm"],
