--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -11,9 +11,46 @@
             "packageNames": ["eslint"],
             "enabled": false
         },
+
         {
             "groupName": "patch-all",
             "matchUpdateTypes": ["patch", "digest"]
+        },
+
+        {
+            "groupName": "minor-updates-nuget",
+            "matchDatasources": ["nuget"],
+            "matchUpdateTypes": ["minor"]
+        },
+        {
+            "groupName": "minor-updates-dart",
+            "matchDatasources": ["dart"],
+            "matchUpdateTypes": ["minor"]
+        },
+        {
+            "groupName": "minor-updates-docker",
+            "matchDatasources": ["docker"],
+            "matchUpdateTypes": ["minor"]
+        },
+        {
+            "groupName": "minor-updates-github-tags-and-runners",
+            "matchDatasources": ["github-tags", "github-runners"],
+            "matchUpdateTypes": ["minor"]
+        },
+        {
+            "groupName": "minor-updates-helm",
+            "matchDatasources": ["helm"],
+            "matchUpdateTypes": ["minor"]
+        },
+        {
+            "groupName": "minor-updates-kubernetes-api",
+            "matchDatasources": ["kubernetes-api"],
+            "matchUpdateTypes": ["minor"]
+        },
+        {
+            "groupName": "minor-updates-terraform-and-provider",
+            "matchDatasources": ["terraform-module", "terraform-provider"],
+            "matchUpdateTypes": ["minor"]
         }
     ]
 }
