--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -14,58 +14,43 @@
         {
             "groupName": "patch-all",
             "matchUpdateTypes": ["patch", "digest"],
-            "automerge": true,
             "automergeType": "branch"
         },
 
         {
             "groupName": "minor-updates-nuget",
             "matchDatasources": ["nuget"],
-            "matchUpdateTypes": ["minor"],
-            "automerge": true,
-            "automergeType": "branch"
+            "matchUpdateTypes": ["minor"]
         },
         {
             "groupName": "minor-updates-dart",
             "matchDatasources": ["dart"],
-            "matchUpdateTypes": ["minor"],
-            "automerge": true,
-            "automergeType": "branch"
+            "matchUpdateTypes": ["minor"]
         },
         {
             "groupName": "minor-updates-docker",
             "matchDatasources": ["docker"],
-            "matchUpdateTypes": ["minor"],
-            "automerge": true,
-            "automergeType": "branch"
+            "matchUpdateTypes": ["minor"]
         },
         {
             "groupName": "minor-updates-github-tags-and-runners",
             "matchDatasources": ["github-tags", "github-runners"],
-            "matchUpdateTypes": ["minor"],
-            "automerge": true,
-            "automergeType": "branch"
+            "matchUpdateTypes": ["minor"]
         },
         {
             "groupName": "minor-updates-helm",
             "matchDatasources": ["helm"],
-            "matchUpdateTypes": ["minor"],
-            "automerge": true,
-            "automergeType": "branch"
+            "matchUpdateTypes": ["minor"]
         },
         {
             "groupName": "minor-updates-kubernetes-api",
             "matchDatasources": ["kubernetes-api"],
-            "matchUpdateTypes": ["minor"],
-            "automerge": true,
-            "automergeType": "branch"
+            "matchUpdateTypes": ["minor"]
         },
         {
             "groupName": "minor-updates-terraform-and-provider",
             "matchDatasources": ["terraform-module", "terraform-provider"],
-            "matchUpdateTypes": ["minor"],
-            "automerge": true,
-            "automergeType": "branch"
+            "matchUpdateTypes": ["minor"]
         }
     ]
 }
