--- a/performance-tests/Identity.Pool.Creator/Identity.Pool.Creator.csproj
+++ b/performance-tests/Identity.Pool.Creator/Identity.Pool.Creator.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\ConsumerApi.Sdk\ConsumerApi.Sdk.csproj" />
+    <ProjectReference Include="..\..\Sdks\ConsumerApi.Sdk\src\ConsumerApi.Sdk.csproj" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
   </ItemGroup>
 
