--- a/Applications/ConsumerApi/test/PerformanceTests/IdentityPoolCreator/PerformanceSnapshotCreator.csproj
+++ b/Applications/ConsumerApi/test/PerformanceTests/IdentityPoolCreator/PerformanceSnapshotCreator.csproj
@@ -14,13 +14,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="pools.json">
+    <None Update="pool-config.heavy.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="pools_light_2.json">
+    <None Update="pool-config.light.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="pools_light.json">
+    <None Update="pool-config.test.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
