--- a/Applications/ConsumerApi/test/ConsumerApi.Tests.Performance/tools/snapshot-creator/ConsumerApi.Tests.Performance.SnapshotCreator.csproj
+++ b/Applications/ConsumerApi/test/ConsumerApi.Tests.Performance/tools/snapshot-creator/ConsumerApi.Tests.Performance.SnapshotCreator.csproj
@@ -9,7 +9,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\..\..\..\Sdks\ConsumerApi.Sdk\src\ConsumerApi.Sdk.csproj" />
+        <ProjectReference Include="..\..\..\..\..\..\Sdks\ConsumerApi.Sdk\src\ConsumerApi.Sdk.csproj" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     </ItemGroup>
 
