--- a/Applications/ConsumerApi/src/ConsumerApi.csproj
+++ b/Applications/ConsumerApi/src/ConsumerApi.csproj
@@ -25,6 +25,7 @@
         <PackageReference Include="Serilog.Formatting.Compact" Version="3.0.0" />
         <PackageReference Include="Serilog.Sinks.Http" Version="9.0.0" />
         <PackageReference Include="Serilog.Sinks.Seq" Version="8.0.0" />
+        <PackageReference Include="AspNetCore.HealthChecks.Azure.Storage.Blobs" Version="8.0.1" />
     </ItemGroup>
 
     <ItemGroup>
