--- a/BuildingBlocks/src/UnitTestTools/UnitTestTools.csproj
+++ b/BuildingBlocks/src/UnitTestTools/UnitTestTools.csproj
@@ -17,6 +17,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\..\Modules\Devices\src\Devices.Domain\Devices.Domain.csproj" />
         <ProjectReference Include="..\BuildingBlocks.Infrastructure\BuildingBlocks.Infrastructure.csproj" />
         <ProjectReference Include="..\DevelopmentKit.Identity\DevelopmentKit.Identity.csproj" />
         <ProjectReference Include="..\Tooling\Tooling.csproj" />
